# solarcharge

./: .gitattributes  .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml
custom_components/solar_charge/: __init__.py  binary_sensor.py  calculations.py  config_flow.py  const.py  control.py  coordinator.py  diagnostics.py  manifest.json  number.py  options_flow.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/solar_charge/frontend/: solar-charge-card.js
custom_components/solar_charge/translations/: en.json
docs/: AC_COUPLED_SETUP.md  DASHBOARD_CARDS.md  DEYE_BATTERY_OPTIMIZATION.md  ENERGY_OPTIMIZATION.md  GLOBIRD_OPTIMIZATION.md  INFLUXDB_SETUP.md  MONITORING_SETUP.md
frontend/: README.md  example-card-config.yaml  package-lock.json  package.json  solar-charge-card.ts  tsconfig.json  vite.config.ts
tests/: load_calculations.py  test_calculations.py  test_control.py
