[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-charge"
version = "0.1.0"
description = "Home Assistant custom integration for safe solar-aware EV charging"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Solar Charge Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "homeassistant>=2025.1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88

